<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cost_of_service"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:autofillHints="none"
        android:ems="10"
        android:hint="@string/cost_of_service"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/service_question"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/how_was_your_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service"/>

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:checkedButton="@id/amazing_twenty_percent"
        app:layout_constraintTop_toBottomOf="@+id/service_question">
        <RadioButton
            android:id="@+id/amazing_twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"/>
        <RadioButton
            android:id="@+id/amazing_eighteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_18"/>
        <RadioButton
            android:id="@+id/amazing_fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_15"/>
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintTop_toBottomOf="@id/tip_options"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/round_up_tip"
        android:id="@+id/round_up_switch"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/calculate_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_up_switch"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tip_result"
        android:text="@string/tip_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_tip" />
</androidx.constraintlayout.widget.ConstraintLayout>

